--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/jasmo2/nodejs-makeitreal#readme",
   "dependencies": {
+    "ejs": "^1.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.2"
   }
